--- a/offline/src/main/resources/log4j.properties
+++ b/offline/src/main/resources/log4j.properties
@@ -1,5 +1,3 @@
-#http://www.mkyong.com/logging/log4j-hello-world-example/
-
 # Root logger option
 log4j.rootLogger=OFF, stdout, file
 
@@ -17,3 +15,6 @@ log4j.appender.file.MaxFileSize=5MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1} - %m%n
+
+# Control packages logs
+log4j.logger.org.springframework=OFF
